@@ -3,7 +3,7 @@
 # utility procs formerly in init.tcl which can be loaded on demand
 # for package management.
 #
-# RCS: @(#) $Id: package.tcl,v 1.23 2003/02/25 23:58:09 dgp Exp $
+# RCS: @(#) $Id: package.tcl,v 1.24 2003/07/11 17:25:50 dgp Exp $
 #
 # Copyright (c) 1991-1993 The Regents of the University of California.
 # Copyright (c) 1994-1998 Sun Microsystems, Inc.
@@ -272,7 +272,9 @@ proc pkg_mkIndex {args} {
 		    set ::tcl::namespaces($::tcl::x) 1
 		}
 		foreach ::tcl::x [package names] {
-		    set ::tcl::packages($::tcl::x) 1
+		    if {[string compare [package provide $::tcl::x] ""]} {
+			set ::tcl::packages($::tcl::x) 1
+		    }
 		}
 		set ::tcl::origCmds [info commands]
 
@@ -366,7 +368,9 @@ proc pkg_mkIndex {args} {
 	    set cmds [lsort [$c eval array names ::tcl::newCmds]]
 	    set pkgs [$c eval set ::tcl::newPkgs]
 	    if {$doVerbose} {
-		tclLog "commands provided were $cmds"
+		if { !$::tcl::direct } {
+		    tclLog "commands provided were $cmds"
+		}
 		tclLog "packages provided were $pkgs"
 	    }
 	    if {[llength $pkgs] > 1} {
