@@ -1,3 +1,9 @@
+2003-07-11  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/package.tcl:  Corrected [pkg_mkIndex] bug reported on
+	comp.lang.tcl.  The indexer was searching for newly indexed packages
+	instead of newly provided packages.
+
 2003-07-08  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* tests/winFCmd.test: fix for five tests under win98 [Bug 767679]
